# github_actions_test

./: .gitignore  .pre-commit-config.yaml  app.py  pyproject.toml
.github/workflows/: ci.yml  python-app.yml
src/github_actions_test/: module1.py
tests/: test_fun.py
