[project]
authors = [{name = "Vladyslav Zahorui", email = "vzahorui.dev@gmail.com"}]
dependencies = []
name = "github_actions_test"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
github_actions_test = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.3,<3.14"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
sphinx = "*"
ruff = "*"

[tool.pixi.feature.dev.tasks]
test = "pytest"

[tool.pixi.environments]
dev = ["dev"]

[tool.ruff]
line-length = 79